--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -42,6 +42,7 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -55,6 +56,7 @@
     "motion": "^11.18.2",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -68,6 +70,7 @@
     "react-router-dom": "^7.1.1",
     "react-simple-image-slider": "^2.4.1",
     "react-star-ratings": "^2.3.0",
+    "react-transition-group": "^4.4.5",
     "react-video-js-player": "^1.1.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
